Update user registry