@@ -1,26 +1,26 @@
 package com.ryderbelserion.crazyenchantments.core.objects;
 
+import com.ryderbelserion.crazyenchantments.api.CrazyEnchantmentsProvider;
 import com.ryderbelserion.crazyenchantments.api.interfaces.IUser;
-import com.ryderbelserion.crazyenchantments.core.enums.Files;
+import com.ryderbelserion.crazyenchantments.core.CrazyEnchantments;
+import com.ryderbelserion.crazyenchantments.core.enums.constants.Messages;
+import com.ryderbelserion.crazyenchantments.core.registry.MessageRegistry;
+import com.ryderbelserion.fusion.core.FusionCore;
 import com.ryderbelserion.fusion.core.FusionProvider;
-import com.ryderbelserion.fusion.files.FileManager;
-import com.ryderbelserion.fusion.files.interfaces.ICustomFile;
-import com.ryderbelserion.fusion.files.types.configurate.YamlCustomFile;
 import com.ryderbelserion.fusion.kyori.FusionKyori;
 import net.kyori.adventure.audience.Audience;
+import net.kyori.adventure.key.Key;
+import net.kyori.adventure.text.Component;
 import org.jetbrains.annotations.NotNull;
-import org.spongepowered.configurate.CommentedConfigurationNode;
-import java.nio.file.Path;
 import java.util.Locale;
-import java.util.Optional;
+import java.util.Map;
 
-public class User implements IUser {
+public class User extends IUser {
 
+    private final CrazyEnchantments plugin = (CrazyEnchantments) CrazyEnchantmentsProvider.getInstance();
     private final FusionKyori fusion = (FusionKyori) FusionProvider.getInstance();
 
-    private final FileManager fileManager = this.fusion.getFileManager();
-
-    private final Path path = this.fusion.getDataPath();
+    private final MessageRegistry messageRegistry = this.plugin.getMessageRegistry();
 
     private final Audience audience;
 
@@ -28,22 +28,34 @@ public class User implements IUser {
         this.audience = audience;
     }
 
+    private Key locale = Messages.default_locale;
+
     @Override
-    public CommentedConfigurationNode locale() {
-        @NotNull final Optional<YamlCustomFile> customFile = this.fileManager.getYamlFile(this.path.resolve(String.format("%s.yml", getLocale())));
-
-        return customFile.map(ICustomFile::getConfiguration).orElseGet(Files.messages::getConfig);
-
+    public Component getComponent(@NotNull final Key key, @NotNull final Map<String, String> placeholders) {
+        return this.messageRegistry.getMessage(getLocale(), key).getComponent(getAudience(), placeholders);
     }
 
-    private String locale = "en-US";
+    @Override
+    public void sendMessage(@NotNull final Key key, @NotNull final Map<String, String> placeholders) {
+        this.messageRegistry.getMessage(getLocale(), key).send(getAudience(), placeholders);
+    }
+
+    @Override
+    public final boolean hasPermission(@NotNull final String permission) {
+        //return this.plugin.hasPermission(getAudience(), permission);
+        return true;
+    }
 
     @Override
     public void setLocale(@NotNull final Locale locale) {
         final String country = locale.getCountry();
         final String language = locale.getLanguage();
 
-        this.locale = String.format("%s-%s", language, country);
+        final String value = "%s_%s.yml".formatted(language, country).toLowerCase();
+
+        if (!value.equalsIgnoreCase("en_us.yml")) {
+            this.locale = Key.key(CrazyEnchantments.namespace, value);
+        }
 
         this.fusion.log("warn", "Locale Debug: Country: {}, Language: {}", country, language);
     }
@@ -54,7 +66,7 @@ public class User implements IUser {
     }
 
     @Override
-    public @NotNull final String getLocale() {
+    public @NotNull final Key getLocale() {
         return this.locale;
     }
 }
